--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build image
         run: |
-              docker build -t ${{ secrets.REGISTRY_USERNAME }}/portfolio:${{github_run_number}} .
+              docker build -t ${{ secrets.REGISTRY_USERNAME }}/portfolio:${{github.run_number}} .
               docker build -t ${{ secrets.REGISTRY_USERNAME }}/portfolio .
       - name: push image to Docker Hub
         run: |
             docker login -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }}
-            docker push ${{ secrets.REGISTRY_USERNAME }}/portfolio:${{github_run_number}}
+            docker push ${{ secrets.REGISTRY_USERNAME }}/portfolio:${{github.run_number}}
             docker push ${{ secrets.REGISTRY_USERNAME }}/portfolio
