--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,31 @@ jobs:
             docker login -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }}
             docker push ${{ secrets.REGISTRY_USERNAME }}/portfolio:${{github.run_number}}
             docker push ${{ secrets.REGISTRY_USERNAME }}/portfolio
+    trivy-scan:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Install Trivy
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: ${{ secrets.REGISTRY_USERNAME }}/portfolio:${{github.run_number}}
+          format: 'table'
+          exit-code: '1'
+          severity: 'CRITICAL,HIGH'
+
+  push:
+    needs: trivy-scan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Docker login
+        run: docker login -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }}
+      - name: Push image
+        run: |
+          docker push ${{ secrets.REGISTRY_USERNAME }}/portfolio:${{github.run_number}}
+          docker push ${{ secrets.REGISTRY_USERNAME }}/portfolio
 
   deploy: 
     needs: build           
