--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,41 +1,12 @@
-name: CI
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
- 
 jobs:
-  
   build:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Build image
         run: |
           docker build -t ${{ secrets.REGISTRY_USERNAME }}/portfolio:${{github.run_number}} .
           docker build -t ${{ secrets.REGISTRY_USERNAME }}/portfolio .
-
-  trivy-scan:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Install Trivy
-        uses: aquasecurity/trivy-action@0.20.0
-        with:
-          image-ref: ${{ secrets.REGISTRY_USERNAME }}/portfolio:${{github.run_number}}
-          format: 'table'
-          exit-code: '1'
-          severity: 'CRITICAL,HIGH'
-
-  push:
-    needs: trivy-scan
-    runs-on: ubuntu-latest
-    steps:
       - name: Docker login
         run: docker login -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }}
       - name: Push image
@@ -43,8 +14,21 @@ jobs:
           docker push ${{ secrets.REGISTRY_USERNAME }}/portfolio:${{github.run_number}}
           docker push ${{ secrets.REGISTRY_USERNAME }}/portfolio
 
-  deploy: 
-    needs: push
+  trivy-scan:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: ${{ secrets.REGISTRY_USERNAME }}/portfolio:${{github.run_number}}
+          format: 'table'
+          exit-code: '1'
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
+
+  deploy:
+    needs: trivy-scan
     runs-on: ubuntu-latest
     steps:
       - name: SSH to Server and deploy
@@ -53,7 +37,6 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
-          #port: ${{ secrets.PORT }}
           script: |
             docker rm -f resume || true
             docker run -d --name resume -p 8080:5001 ${{ secrets.REGISTRY_USERNAME }}/portfolio:${{github.run_number}}
