--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,6 @@ jobs:
         id: set-image
         run: |
           IMAGE_URI="${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPO_NAME }}:${{ github.run_number }}"
-          echo "Building and pushing $IMAGE_URI"
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
           echo "image=$IMAGE_URI" >> $GITHUB_OUTPUT
@@ -42,6 +41,16 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: us-east-1
+
+      - name: Login to ECR for Trivy
+        run: |
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
+
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.20.0
         with:
@@ -68,8 +77,6 @@ jobs:
           TASK_FAMILY="simple-task"
           IMAGE_URI="${{ needs.build.outputs.image-uri }}"
 
-          echo "Deploying $IMAGE_URI to ECS..."
-
           TASK_DEF=$(aws ecs describe-task-definition --task-definition $TASK_FAMILY)
 
           NEW_TASK_DEF=$(echo $TASK_DEF | jq --arg IMAGE "$IMAGE_URI" \
@@ -83,6 +90,6 @@ jobs:
               memory: .taskDefinition.memory}')
 
           echo "$NEW_TASK_DEF" > new-task.json
-
           aws ecs register-task-definition --cli-input-json file://new-task.json
           aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME --force-new-deployment
+
