--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -13,6 +13,10 @@ jobs:
   build_job:
     runs-on: ubuntu-latest
 
+    permissions:
+      id-token: write
+      contents: read
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -32,18 +36,17 @@ jobs:
 
       - name: Build image
         run: docker build -t my-portfolio .
-      
-      - name: configure Aws credentials
+
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-            role-to-assume: arn:aws:iam::977098999802:role/OIDC-ROLE
-            aws-region: us-east-1
-      
+          role-to-assume: arn:aws:iam::977098999802:role/OIDC-ROLE
+          aws-region: us-east-1
+
       - name: Upload to S3
         uses: aws-actions/s3-sync@v1
         with:
-          bucket: my-bucket-gamela.shop 
+          bucket: my-bucket-gamela.shop
           region: us-east-1
           source-dir: .
           dest-dir: utc-app/
-          
