--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -44,7 +44,7 @@ jobs:
           aws-region: us-east-1
 
       - name: Upload to S3
-        uses: aws-actions/s3-sync@v1
+        uses: shallwefootball/s3-upload-action@v1.3.1
         with:
           bucket: my-bucket-gamela.shop
           region: us-east-1
