--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -47,8 +47,10 @@ jobs:
           aws-region: us-east-1
 
       - name: Upload to S3
-        uses: shallwefootball/s3-upload-action@v1.3.1
+        uses: jakejarvis/s3-sync@v0.5.1
         with:
+            args: --delete
+        env:    
           bucket: my-bucket-gamela.shop
           region: us-east-1
           source-dir: .
