--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Unit tests
         run: pytest
 
-      - name: Build image
+      - name: Build images
         run: docker build -t my-portfolio .
