--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -5,10 +5,16 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+permissions:
+  id-token: write
+  contents: read
 env:
-  python-version: "3.11"
-
+  env: 
+  Python_version: 3.11
+  IMAGE_NAME: portfolio
+  AWS_REGION: us-east-1
+  ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID}}
+  ECR_REPO: ${{ secrets.ECR_REPO }}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -29,6 +35,13 @@ jobs:
 
       - name: Unit tests
         run: pytest
+      
+      - name: Configure AWS credentials (OIDC)
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          aws-region: ${{ env.AWS_REGION }}
+  
 
       - name: Build images
         run: docker build -t my-portfolio .
