--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,6 +13,7 @@ env:
   Python_version: 3.11
   IMAGE_NAME: portfolio
   AWS_REGION: us-east-1
+  IMAGE_TAG: ${{ github.sha }}
   ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID}}
   ECR_REPO: ${{ secrets.ECR_REPO }}
 jobs:
@@ -42,6 +43,22 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: ${{ env.AWS_REGION }}
   
-
-      - name: Build images
-        run: docker build -t my-portfolio .
+      - name: Login to ECR
+        uses: aws-actions/amazon-ecr-login@v2 
+        
+      - name: Build, Tag & Push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+      
+      - name: Scan image with Trivy
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+          format: table
+          exit-code: '1'
+          severity: HIGH,CRITICAL
+              
