--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -5,18 +5,20 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+
 permissions:
   id-token: write
   contents: read
+
 env:
-  env: 
-  Python_version: 3.11
+  PYTHON_VERSION: "3.11"
   IMAGE_NAME: portfolio
   AWS_REGION: us-east-1
   IMAGE_TAG: ${{ github.sha }}
-  ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID}}
-  ECR_REPO: ${{ secrets.ECR_REPO }}
+  ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+  ECR_REPO: ${{ secrets.ECR_REPO }}   # <--- THIS is the correct var
   AWS_ROLE_TO_ASSUME: ${{ secrets.AWS_ROLE_ARN }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,39 +30,38 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ env.python-version }}
+          python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest 
+          pip install pytest
 
       - name: Unit tests
         run: pytest || true
-      
+
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v3
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
-  
+
       - name: Login to ECR
-        uses: aws-actions/amazon-ecr-login@v2 
-        
+        uses: aws-actions/amazon-ecr-login@v2
+
       - name: Build, Tag & Push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: |
-            ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
-      
+            ${{ env.ECR_REPO }}:${{ env.IMAGE_TAG }}     # <--- FIXED
+
       - name: Scan images with Trivy
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+          image-ref: ${{ env.ECR_REPO }}:${{ env.IMAGE_TAG }}  # <--- FIXED
           format: table
           exit-code: '1'
           severity: HIGH,CRITICAL
-
